--- a/src/App.css
+++ b/src/App.css
@@ -5,19 +5,6 @@ html, body {
   margin: 0;
 }
 
-.container {
-  height: 100%;
-  width: inherit;
-  background-color: black;
-  margin: 0;
-}
-.header {
-  display: flex;
-  flex-direction: row;
-  background-color: antiquewhite;
-  height: 8%;
-}
-
 .content {
   display: flex;
   flex-direction: row;
@@ -25,15 +12,37 @@ html, body {
   height: 92%;
 }
 .content-left {
-  width: 20%;
-  height: auto;
-  background-color: #92ff2c;
+  width: 420px;
+  height: 661px;
+  background-color: #999;
+  display: flex;
+  flex-direction: row;
+}
+
+.content-headers {
+  width: 67px;
+  height: 100%;
+  background-image: linear-gradient(#0cb3ff, #0068ff);
+  display: flex;
+  flex-direction: column;
+}
+
+.content-avatar {
+  width: 45px;
+  height: 45px;
+  padding-left: 11px;
+  background-image: url("//s120-ava-talk.zadn.vn/8/f/3/5/6/120/499c8cfa904f6c89e44aed82aab25b06.jpg");
+  border-radius: 100%;
+}
+
+.content-between {
+  width: 357px;
+  height: 100%;
 }
 
 .content-right {
   width: 80%;
   height: auto;
-  background-color: #a7dafa;
 }
 
 .container-right {
